# mail_CPP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c
include/: consistently.h  error_codes.h  parallel.h  proccesing.h  type_definitions.h  utils.h
src/: consistently.c  parallel.c  proccesing.c  utils.c
test/: CMakeLists.txt
